// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Categories /> should render with default props 1`] = `
<div>
  <div
    class="categories"
  >
    <ul
      class="categories__list "
    />
  </div>
</div>
`;

exports[`<Categories /> should render with props 1`] = `
<div>
  <div
    class="categories"
  >
    <ul
      class="categories__list "
    >
      <li
        class="categories__list-item"
      >
        <strong>
          titre 1
        </strong>
        <p>
          contenu 1
        </p>
      </li>
      <li
        class="categories__list-item"
      >
        <strong>
          titre 2
        </strong>
        <p>
          contenu 2
        </p>
      </li>
    </ul>
  </div>
</div>
`;
